2014-11-16  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* term/Makefile.am.in (Makefile.am): Drop creation of conditional
	definition of build_lua.
	(all, $(srcdir)/lua/gnuplot-tikz.help): Drop rules for lua help
	file fragment generation.

	* docs/Makefile.am (LUA_HELP) [BUILD_LUA]: Define to name of lua
	help file fragment.
	($(LUA_HELP)) [BUILD_LUA]: Build lua help file fragment.
	(allterm.h): Depend on $(LUA_HELP).

	* term/lua.trm: Make inclusion of help file fragment depend on
	HAVE_LUA.  Needed for doc builds that unconditionally include all
	terminals' help. Remove "lua/" from include file name.

2014-11-15  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* term/Makefile.am.in ($(srcdir)/lua/gnuplot-tikz.help): Test for
	file existence is -f, not -x.

2014-11-15 Ethan A Merritt  <merritt@u.washington.edu>

	* term/Makefile.am.in: rebuild term/lua/gnuplot-tikz.help
	only if --with-lua, otherwise skip this in building the docs

2014-11-12 Ethan A Merritt  <merritt@u.washington.edu>

	* term/lua/gnuplot-tiz.help (remove from repository)
	* term/Makefile.am.in: rebuild term/lua/gnuplot-tikz.help

2014-11-07 Akira Kakuto <kakuto@fuk.kindai.ac.jp>

	* term/luz/gnuplot-tikz.lua:  Use \errmessage rather than \PackageError
	because not all TeX variants provide the latter.

2014-11-06 Ethan A Merritt  <merritt@u.washington.edu>

	* src/time.c (gstrftime xstrftime) docs/gnuplotdoc demo/timedat.dem:
	Introduce a new time format modifier 't', used to distinguish dates
	from times.  This allows formatting time data as hours/minutes/seconds
	relative to time=0 rather than as a calendar date.  Compare these
	representations of the stored value -3672.50 seconds:
	    default date format    # "12/31/69 \n 22:58"
	    format "%tH:%tM:%tS"   # "-01:01:12"
	    format "%.2tH hours"   # "-1.02 hours"
	    format "%tM:%.2tS"     # "-61:12.50"

2014-11-04  Daniel J Sebald <daniel.sebald@ieee.org>
